docs-archive/apache-airflow-providers-keycloak/0.3.0/_sources/_api/airflow/providers/keycloak/auth_manager/datamodels/token/index.rst.txt
airflow.providers.keycloak.auth_manager.datamodels.token
========================================================

.. py:module:: airflow.providers.keycloak.auth_manager.datamodels.token


Classes
-------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.datamodels.token.TokenResponse
   airflow.providers.keycloak.auth_manager.datamodels.token.TokenBody


Module Contents
---------------

.. py:class:: TokenResponse(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Token serializer for responses.


   .. py:attribute:: access_token
      :type:  str


.. py:class:: TokenBody(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.StrictBaseModel`


   Token serializer for post bodies.


   .. py:attribute:: username
      :type:  str
      :value: None



   .. py:attribute:: password
      :type:  str
      :value: None



